[gd_scene load_steps=5 format=3 uid="uid://wj8h4mocnpja"]

[ext_resource type="Script" uid="uid://uqt5lqj1xr6t" path="res://Common/MouseClickWidgets/Scripts/_draggable.gd" id="1"]
[ext_resource type="Script" uid="uid://re6hm7uvl73n" path="res://Common/MouseClickWidgets/Components/mouse_drag_component.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ce8hjyeqgxo7j" path="res://icon.svg" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3k5jm"]
size = Vector2(128, 128)

[node name="DraggableItem" type="Area2D"]
script = ExtResource("1")

[node name="MouseDragComponent" type="Node" parent="."]
script = ExtResource("2")
metadata/_custom_type_script = "uid://re6hm7uvl73n"

[node name="TextureRect" type="Sprite2D" parent="."]
texture = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3k5jm")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="drag_ended" from="MouseDragComponent" to="." method="_on_item_drag_ended"]
[connection signal="drag_started" from="MouseDragComponent" to="." method="_on_item_drag_started"]
